--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -85,40 +85,42 @@
             </div>
         </header>
 
-        <div class="container">
-            <div class="row">
-                <div id="gauge-contributors" class="col-sm-12 col-lg-6">
-                    <a href="{{ path('haphpy_contributions') }}" class="stand-out">
-                        <span>{{ gauge.amount }}</span> {{ 'gauge.contributions'|trans }}
-                    </a>
-                </div>
-                <div id="gauge-remaining-days" class="col-sm-12 col-lg-6">
-                    {% set days = (limit_date|date('U') - 'now'|date('U'))|date('z')  %}
-                    <span>{{ days }} </span>{{ 'gauge.remaining_days'|trans }}
-                </div>
-            </div>
-            <div id="gauge">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-danger progress-bar-striped active"
-                        data-placement="right"
-                        data-toggle="tooltip"
-                        title=""
-                        style="width:{{ gauge.percent }}%;"
-                        data-original-title="{{ gauge.amount }} contributions"
-                    >
+        <section id="gauge-section">
+            <div class="container">
+                <div class="row">
+                    <div id="gauge-contributors" class="col-sm-12 col-lg-6">
+                        <a href="{{ path('haphpy_contributions') }}" class="stand-out">
+                            <span>{{ gauge.amount }}</span> {{ 'gauge.contributions'|trans }}
+                        </a>
+                    </div>
+                    <div id="gauge-remaining-days" class="col-sm-12 col-lg-6">
+                        {% set days = (limit_date|date('U') - 'now'|date('U'))|date('z')  %}
+                        <span>{{ days }} </span>{{ 'gauge.remaining_days'|trans }}
                     </div>
                 </div>
-                <div class="gauge-steps">
-                {% for step in gauge.steps %}
-                    {% set step_percent = ((step.value / gauge.getStepsMaxValue) * 100)|round %}
-                    <div class="gauge-step" style="left:{{ step_percent }}%;">
-                        <span class="gauge-step-dot">&nbsp;</span>
-                        <span class="gauge-step-name">{{ ('gauge.step.' ~ step.name)|trans }}</span>
+                <div id="gauge">
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-danger progress-bar-striped active"
+                            data-placement="right"
+                            data-toggle="tooltip"
+                            title=""
+                            style="width:{{ gauge.percent }}%;"
+                            data-original-title="{{ gauge.amount }} contributions"
+                        >
+                        </div>
                     </div>
-                {% endfor %}
+                    <div class="gauge-steps">
+                    {% for step in gauge.steps %}
+                        {% set step_percent = ((step.value / gauge.getStepsMaxValue) * 100)|round %}
+                        <div class="gauge-step" style="left:{{ step_percent }}%;">
+                            <span class="gauge-step-dot">&nbsp;</span>
+                            <span class="gauge-step-name">{{ ('gauge.step.' ~ step.name)|trans }}</span>
+                        </div>
+                    {% endfor %}
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         {% block content %}
 
