--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
@@ -3,18 +3,37 @@
 {% import "AppBundle:Macro:style.html.twig" as haphpy %}
 
 {% block content %}{% spaceless %}
-    <div class="container">
-        <ul class="nav-tabs nav-justified">
-            <li class="active">
-                <a href="#tab-contributions">{{ contributions|length }} {{ 'contributions.contributors_list'|trans }}</a>
-            </li>
-            <li>
-              <a href="#tab-user-group">{{ userGroups|length }} {{ 'contributions.php_user_groups'|trans }}</a>
-            </li>
-        </ul>
+    <section id="contributions" class="page-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <h3>
+                        {{ contributions|length }} {{ 'contributions.contributors_list'|trans }}
+                    </h3>
+                </div>
+            </div>
 
-        <div class="tab-content">
-            <div class="tab-pane" id="tab-user-group">
+            <div class="row">
+                {% for contribution in contributions %}
+                    <div class="col-sm-12 col-md-6 col-lg-3 contribution">
+                        <span class="fa haphpy-icon-{{ contribution.authProvider }}"></span>
+                        {{ contribution.identifier }}
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </section>
+
+    <section class="page-section" id="php-user-groups">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <h3>
+                        {{ userGroups|length }} {{ 'contributions.php_user_groups'|trans }}
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
                 {% for group in userGroups|shuffle %}
                     <div class="col-sm-12 col-md-6 col-lg-4 user-group">
                         <div class="user-group-image">
@@ -41,15 +60,6 @@
                     </div>
                 {% endfor %}
             </div>
-
-            <div class="tab-pane active" id="tab-contributions">
-                {% for contribution in contributions %}
-                    <div class="col-sm-12 col-md-6 col-lg-3 contribution">
-                        <span class="fa haphpy-icon-{{ contribution.authProvider }}"></span>
-                        {{ contribution.identifier }}
-                    </div>
-                {% endfor %}
-            </div>
         </div>
-    </div>
+    </section>
 {% endspaceless %}{% endblock %}
