Update index layout with more space

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
@@ -5,8 +5,18 @@
 {% import "AppBundle:Macro:style.html.twig" as haphpy %}
 
 {% block content %}
+    <section class="page-section" id="introduction">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-12">
+                    {{ 'content.introduction'|trans|raw }}
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="page-section">
         <div class="container">
+            <h2>{{ 'step.title'|trans }}</h2>
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     {% for flashMessage in app.session.flashbag.get('notice') %}
@@ -78,19 +88,57 @@
                 </div>
                 {{ form_end(form) }}
             </div>
+        </div>
+    </section>
 
+    <section class="page-section" id="examples">
+        <div class="container">
+            <h2 id="contribution-examples">{{ 'about.uploaded_assets.examples.title'|trans }}</h2>
             <div class="row">
-                <div class="col-sm-12 col-md-4">
-                    <h3>{{ 'content.celebrating.title'|trans|raw }}</h3>
-                    <p>{{ 'content.celebrating.paragraph'|trans|raw }}</p>
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <h5>{{ 'about.uploaded_assets.examples.message'|trans }}</h5>
+                    <div class="video-container">
+                        <video controls poster="/assets/images/ilovephp.jpg">
+                            <source src="/assets/videos/ilovephp.webm" type='video/webm;codecs="vp8, vorbis"'>
+                            <source src="/assets/videos/ilovephp.mp4" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'>
+                        </video>
+                    </div>
                 </div>
-                <div class="col-sm-12 col-md-4">
-                    <h3>{{ 'content.video.title'|trans|raw }}</h3>
-                    <p>{{ 'content.video.paragraph'|trans|raw }}</p>
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <h5>{{ 'about.uploaded_assets.examples.express_yourself'|trans }}</h5>
+                    <div class="video-container">
+                        <img src="/assets/images/phpisart.png" class="fitting-image">
+                    </div>
                 </div>
-                <div class="col-sm-12 col-md-4">
-                    <h3>{{ 'content.contribute.title'|trans|raw }}</h3>
-                    <p>{{ 'content.contribute.paragraph'|trans|raw }}</p>
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <h5>{{ 'about.uploaded_assets.examples.php_acronym'|trans }}</h5>
+                    <div class="video-container">
+                        <video controls>
+                            <source src="/assets/videos/people.webm" type='video/webm;codecs="vp8, vorbis"'>
+                            <source src="/assets/videos/people.mp4" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'>
+                        </video>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <h5>{{ 'about.uploaded_assets.examples.tribute'|trans }}</h5>
+                    <div class="video-container">
+                        <img src="/assets/images/phpbiscuits.jpg" class="fitting-image">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <h5>{{ 'about.uploaded_assets.examples.php_asset'|trans }}</h5>
+                    <div class="video-container">
+                        <video controls poster="/assets/images/php-saved-my-life.jpg">
+                            <source src="/assets/videos/php-saved-my-life.webm" type='video/webm;codecs="vp8, vorbis"'>
+                            <source src="/assets/videos/php-saved-my-life.mp4" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'>
+                        </video>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <h5>…</h5>
+                    <div class="video-container">
+                        {{ 'about.uploaded_assets.examples.beyond'|trans|raw }}
+                    </div>
                 </div>
             </div>
         </div>
