--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -79,10 +79,10 @@
                 </div>
             {% endif %}
 
-            <div>
-                <img src="/assets/images/haphpy-birthday.svg" id="haphpy-logo">
-                <h1>{{ 'haphpy.punchline'|trans|raw }}</h1>
+            <div id="haphpy-logo">
+                <img src="/assets/images/haphpy-birthday.svg">
             </div>
+            <h1>{{ 'haphpy.punchline'|trans|raw }}</h1>
         </header>
 
         <section id="gauge-section">
